IF (WEBKIT_USE_DATABASE)
    
    FILE (GLOB DATABASE_SYMLINK RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} SQLite/BC*.h)
    FOREACH (FILES ${DATABASE_SYMLINK})
        OWBLN (${FILES} OWBAL 0 0)
    ENDFOREACH (FILES)
    
    INCLUDE_DIRECTORIES (
        ${CMAKE_SOURCE_DIR}/JavaScriptCore/
	${CMAKE_SOURCE_DIR}/JavaScriptCore/VM/
	${CMAKE_SOURCE_DIR}/JavaScriptCore/runtime
	${CMAKE_SOURCE_DIR}/WebCore/storage/
        ${SQLITE_INCLUDE_DIRS}
    )

    IF (WEBKIT_USE_I18N STREQUAL "GENERIC")
    INCLUDE_DIRECTORIES (
        ${CMAKE_SOURCE_DIR}/JavaScriptCore/icu
    )
    ENDIF (WEBKIT_USE_I18N STREQUAL "GENERIC") 
    IF (${OWBAL_PLATFORM_GRAPHICS} STREQUAL "GTK")
        INCLUDE_DIRECTORIES (
            ${GTK2_INCLUDE_DIRS}
        )
    ENDIF (${OWBAL_PLATFORM_GRAPHICS} STREQUAL "GTK")


    AUX_SOURCE_DIRECTORY (SQLite DATABASE_SRC)
  
    IF (BUILD_SHARED_LIBS)
        ADD_LIBRARY (bal-database ${DATABASE_SRC})
    ELSE (BUILD_SHARED_LIBS)
        ADD_LIBRARY (bal-database STATIC ${DATABASE_SRC})
    ENDIF (BUILD_SHARED_LIBS)
    
    TARGET_LINK_LIBRARIES (bal-database ${SQLITE_LIBRARIES})
    
    INSTALL (TARGETS bal-database
        LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
        ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
    )
ENDIF (WEBKIT_USE_DATABASE)
