INCLUDE_DIRECTORIES (
    ${CMAKE_BINARY_DIR}/generated_link/WKAL
    ${CMAKE_SOURCE_DIR}/JavaScriptCore/
    ${CMAKE_SOURCE_DIR}/JavaScriptCore/VM
    ${CMAKE_SOURCE_DIR}/JavaScriptCore/kjs
    ${CMAKE_SOURCE_DIR}/JavaScriptCore/runtime
    ${PNG12_INCLUDE_DIRS}
    ${JPEG_INCLUDE_DIR}
)

IF (${OWBAL_PLATFORM_GRAPHICS} STREQUAL "GTK")
    INCLUDE_DIRECTORIES (
        ${GTK2_INCLUDE_DIRS}
    )
ENDIF (${OWBAL_PLATFORM_GRAPHICS} STREQUAL "GTK")

IF (WEBKIT_USE_I18N STREQUAL "GENERIC")
    INCLUDE_DIRECTORIES (
        ${CMAKE_SOURCE_DIR}/JavaScriptCore/icu
    )
ENDIF (WEBKIT_USE_I18N STREQUAL "GENERIC")

OWBLN (WK/BCImageDecoderWK.h OWBAL 0 0)
OWBLN (BMP/WK/BCBMPImageDecoderWK.h OWBAL 0 0)
OWBLN (GIF/WK/BCGIFImageDecoderWK.h OWBAL 0 0)
OWBLN (GIF/WK/BCGIFImageReaderWK.h OWBAL 0 0)
OWBLN (ICO/WK/BCICOImageDecoderWK.h OWBAL 0 0)
OWBLN (JPEG/WK/BCJPEGImageDecoderWK.h OWBAL 0 0)
OWBLN (PNG/WK/BCPNGImageDecoderWK.h OWBAL 0 0)
OWBLN (XBM/WK/BCXBMImageDecoderWK.h OWBAL 0 0)


AUX_SOURCE_DIRECTORY (BMP/WK IMAGEDECODER_SRC)
AUX_SOURCE_DIRECTORY (GIF/WK IMAGEDECODER_SRC)
AUX_SOURCE_DIRECTORY (ICO/WK IMAGEDECODER_SRC)
AUX_SOURCE_DIRECTORY (JPEG/WK IMAGEDECODER_SRC)
AUX_SOURCE_DIRECTORY (PNG/WK IMAGEDECODER_SRC)
AUX_SOURCE_DIRECTORY (XBM/WK IMAGEDECODER_SRC)

IF (BUILD_SHARED_LIBS)
    ADD_LIBRARY (bal-imagedecoder ${IMAGEDECODER_SRC})
ELSE (BUILD_SHARED_LIBS)
    ADD_LIBRARY (bal-imagedecoder STATIC ${IMAGEDECODER_SRC})
ENDIF (BUILD_SHARED_LIBS)

TARGET_LINK_LIBRARIES (bal-imagedecoder ${PNG12_LIBRARIES};${JPEG_LIBRARY})

INSTALL (TARGETS bal-imagedecoder
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
)
