OPTION (WEBKIT_USE_HTML5_VIDEO "Compile WebKit with html5 video support." ON)

IF (WEBKIT_USE_HTML5_VIDEO)
    ADD_DEFINITIONS (-DENABLE_VIDEO=1)
ENDIF (WEBKIT_USE_HTML5_VIDEO)
        
INCLUDE_DIRECTORIES (
    ${CMAKE_BINARY_DIR}/generated_link/WKAL
    ${CMAKE_SOURCE_DIR}/JavaScriptCore/
    ${CMAKE_SOURCE_DIR}/JavaScriptCore/VM
    ${CMAKE_SOURCE_DIR}/JavaScriptCore/runtime
    ${CMAKE_SOURCE_DIR}/WebCore/css
    ${CMAKE_SOURCE_DIR}/WebCore/dom
    ${CMAKE_SOURCE_DIR}/WebCore/editing
    ${CMAKE_SOURCE_DIR}/WebCore/html
    ${CMAKE_SOURCE_DIR}/WebCore/loader
    ${CMAKE_SOURCE_DIR}/WebCore/page
    ${CMAKE_SOURCE_DIR}/WebCore/rendering
    ${CMAKE_SOURCE_DIR}/WebCore/rendering/style
    ${CMAKE_SOURCE_DIR}/WebCore/svg
    ${GTK2_INCLUDE_DIRS}
)
IF (WEBKIT_USE_HTML5_VIDEO)
    INCLUDE_DIRECTORIES (
        ${CURL_INCLUDE_DIR}
        ${GSTREAMER_VIDEO_INCLUDE_DIRS}
        ${GNOMEVFS_INCLUDE_DIRS}
    )
ENDIF (WEBKIT_USE_HTML5_VIDEO)

IF (OWBAL_PLATFORM_GRAPHICS STREQUAL "GTK")
    OWBLN (Gtk/BCSoundGtk.h OWBAL 0 0)
    OWBLN (WK/BCMediaPlayerWK.h OWBAL 0 0)
    
    IF (WEBKIT_USE_HTML5_VIDEO)
        OWBLN (GStreamer/BCMediaPlayerPrivateGStreamer.h OWBAL 1 0)
        AUX_SOURCE_DIRECTORY (WK MEDIA_SRC)
        AUX_SOURCE_DIRECTORY (GStreamer MEDIA_SRC)
    ENDIF (WEBKIT_USE_HTML5_VIDEO)
    AUX_SOURCE_DIRECTORY (Gtk MEDIA_SRC)
ELSEIF (OWBAL_PLATFORM_GRAPHICS STREQUAL "SDL")
    OWBLN (SDL/BCSoundSDL.h OWBAL 0 0)
    OWBLN (SDL/BCMediaPlayerSDL.h OWBAL 0 0)
    OWBLN (SDL/BCMediaPlayerPrivateSDL.h OWBAL 1 0)
    
    IF (WEBKIT_USE_HTML5_VIDEO)
        AUX_SOURCE_DIRECTORY (WK MEDIA_SRC)
    ENDIF (WEBKIT_USE_HTML5_VIDEO)
    AUX_SOURCE_DIRECTORY (SDL MEDIA_SRC)
ENDIF (OWBAL_PLATFORM_GRAPHICS STREQUAL "GTK")

INCLUDE (Customer/CMakeLists.txt OPTIONAL)

IF (BUILD_SHARED_LIBS)
    ADD_LIBRARY (bal-media ${MEDIA_SRC})
ELSE (BUILD_SHARED_LIBS)
    ADD_LIBRARY (bal-media STATIC ${MEDIA_SRC})
ENDIF (BUILD_SHARED_LIBS)
    
IF (WEBKIT_USE_HTML5_VIDEO AND OWBAL_PLATFORM_GRAPHICS STREQUAL "GTK")
    TARGET_LINK_LIBRARIES (bal-media ${GSTREAMER_VIDEO_LIBRARIES};${GNOMEVFS_LIBRARIES})
ENDIF (WEBKIT_USE_HTML5_VIDEO AND OWBAL_PLATFORM_GRAPHICS STREQUAL "GTK")

IF (OWBAL_PLATFORM_GRAPHICS STREQUAL "GTK")
    TARGET_LINK_LIBRARIES (bal-media ${GTK2_LIBRARIES})
ENDIF (OWBAL_PLATFORM_GRAPHICS STREQUAL "GTK")

INSTALL (TARGETS bal-media
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
)
