INCLUDE_DIRECTORIES (
    ${CMAKE_SOURCE_DIR}/WebCore/svg/
    ${CMAKE_SOURCE_DIR}/WebCore/css
    ${CMAKE_SOURCE_DIR}/WebCore/dom
    ${CMAKE_SOURCE_DIR}/WebCore/page
    ${CMAKE_SOURCE_DIR}/WebCore/history
    ${CMAKE_SOURCE_DIR}/WebCore/html
    ${CMAKE_SOURCE_DIR}/WebCore/loader
    ${CMAKE_SOURCE_DIR}/WebCore/editing
    ${CMAKE_SOURCE_DIR}/WebCore/rendering
    ${CMAKE_SOURCE_DIR}/WebCore/rendering/style
    ${CMAKE_SOURCE_DIR}/JavaScriptCore/VM
    ${CMAKE_SOURCE_DIR}/JavaScriptCore/kjs
)

IF (WEBKIT_USE_I18N STREQUAL "GENERIC")
    INCLUDE_DIRECTORIES (
        ${CMAKE_SOURCE_DIR}/JavaScriptCore/icu
    )
ENDIF (WEBKIT_USE_I18N STREQUAL "GENERIC")


IF (OWBAL_PLATFORM_GRAPHICS STREQUAL "GTK")
    OWBLN (Gtk/BCPlatformKeyboardEventGtk.h WKAL 0 0)
    OWBLN (Gtk/BCPlatformMouseEventGtk.h WKAL 0 0)
    OWBLN (Gtk/BCPlatformWheelEventGtk.h WKAL 0 0)
    OWBLN (Gtk/BCKeyboardCodesGtk.h WKAL 0 0)
    OWBLN (Gtk/BCEventHandlerGtk.h WKAL 0 1)
    OWBLN (Gtk/BCEventLoopGtk.h WKAL 0 0)

    INCLUDE_DIRECTORIES (${GTK2_INCLUDE_DIRS})
    
    AUX_SOURCE_DIRECTORY (Gtk EVENTS_SRC)
ELSEIF (OWBAL_PLATFORM_GRAPHICS STREQUAL "SDL")
    OWBLN (SDL/BCPlatformKeyboardEventSDL.h WKAL 0 0)
    OWBLN (SDL/BCPlatformMouseEventSDL.h WKAL 0 0)
    OWBLN (SDL/BCPlatformWheelEventSDL.h WKAL 0 0)
    OWBLN (SDL/BCKeyboardCodesSDL.h WKAL 0 0)
    OWBLN (SDL/BCEventLoopSDL.h WKAL 0 0)

    INCLUDE_DIRECTORIES (${SDL_INCLUDE_DIRS})

    AUX_SOURCE_DIRECTORY (SDL EVENTS_SRC)
ENDIF (OWBAL_PLATFORM_GRAPHICS STREQUAL "GTK")

INCLUDE (Customer/CMakeLists.txt OPTIONAL)

IF (BUILD_SHARED_LIBS)
    ADD_LIBRARY (bal-events ${EVENTS_SRC})
ELSE (BUILD_SHARED_LIBS)
    ADD_LIBRARY (bal-events STATIC ${EVENTS_SRC})
ENDIF (BUILD_SHARED_LIBS)

IF (OWBAL_PLATFORM_GRAPHICS STREQUAL "GTK")
    TARGET_LINK_LIBRARIES (bal-events ${GTK2_LIBRARIES})
ELSEIF (OWBAL_PLATFORM_GRAPHICS STREQUAL "SDL")
    TARGET_LINK_LIBRARIES (bal-events ${SDL_LIBRARIES})
ENDIF (OWBAL_PLATFORM_GRAPHICS STREQUAL "GTK")

INCLUDE (Customer/CMakeLists.txt OPTIONAL)

INSTALL (TARGETS bal-events
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
)
